<resources>
    <string name="app_name">SmartWaterFlow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="notsignedin">Dont have an account yet ?<b> Sign up </b></string>
    <string name="already">Already have an account ?<b> Sign in </b></string>
    <string name="forgot">Enter Email address</string>
    <string name="send">Send Email</string>
    <string name="forgotPass">Forgot Password ?</string>
    <string name="namerror">Enter a name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="passerror">Enter 6 character password</string>
    <string name="btnon">On</string>
    <string name="btnoff">Off</string>
</resources>